--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-rails-project",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.23.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
