--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@babel/preset-env": "^7.22.20",
     "webpack-dev-server": "^3"
   },
   "engines": {
