--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@babel/core": "^7.23.0",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-methods": "^7.22.5",
-    "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-macros": "^3.1.0"
   },
   "version": "0.1.0",
   "devDependencies": {
