--- a/package.json
+++ b/package.json
@@ -2,22 +2,22 @@
   "name": "my-rails-project",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.23.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-private-methods": "^7.22.5",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.4",
+    "babel-plugin-macros": "^3.1.0",
     "turbolinks": "^5.2.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
-    "@babel/core": "^7.23.0",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/plugin-transform-private-methods": "^7.22.5",
-    "babel-plugin-macros": "^3.1.0"
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3",
-    "@babel/preset-env": "^7.22.20"
+    "@babel/preset-env": "^7.22.20",
+    "webpack-dev-server": "^3"
   },
   "engines": {
     "node": ">=12.0.0 <19.0.0"
