--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   },
   "engines": {
     "node": ">=12.0.0 <19.0.0"
+  },
+  "scripts": {
+    "build": "webpack --config webpack.config.js"
   }
 }
