--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-plugin-macros": "^3.1.0",
     "turbolinks": "^5.2.0"
   },
+  "license": "MIT",
   "version": "0.1.0",
   "devDependencies": {
     "@babel/preset-env": "^7.22.20",
