--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "webpack-dev-server": "^3"
   },
   "engines": {
-    "node": ">=12.0.0 <19.0.0"
+    "node": ">18.18.0",
+    "yarn": "1.22.19"
   },
   "scripts": {
     "build": "webpack --config webpack.config.js"
